--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,8 @@
 *.swp
 *.zip
 *.jar
-.DS_Store
-.DS_Store
+/resources/implementationguide/ig-expansion-parameters.json
+/resources/implementationguide/ig-new.json
+/resources/implementationguide/ig-new.xml
+/resources/implementationguide/ig-validation-parameters.json
+ig.ini
